# Jnus.1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  01-foundation.md  02-brain-engine.md  03-frameworks.md  04-08-phases.md  Dockerfile.api  Dockerfile.frontend  LIBRARIES_AND_FIXES.md  Makefile  OneAgentOS.jsx  README-1.md  README.md  TODO-EXECUTION-PLAN.md  architecture.md  docker-compose.agents.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  extract.sh  index.html  jnus-audit-v6.jsx  nginx.conf  oneagent-report-1.jsx.txt  package.json  pnpm-workspace.yaml  push-to-git.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  rules.md  setup.sh  test-all.sh  tsconfig.json  validate.sh  رسالة-سيلينا-النهائية.md
.github/workflows/: ci.yml
.wrangler/cache/: pages.json
dockerfiles/: Dockerfile.agentgpt  Dockerfile.agentverse  Dockerfile.aider  Dockerfile.autogen  Dockerfile.autogpt  Dockerfile.babyagi  Dockerfile.botpress  Dockerfile.camel  Dockerfile.crewai  Dockerfile.haystack  Dockerfile.huggingface  Dockerfile.langchain  Dockerfile.langgraph  Dockerfile.letta  Dockerfile.llamaindex  Dockerfile.mem0  Dockerfile.metagpt  Dockerfile.openhands  Dockerfile.rasa  Dockerfile.semantic-kernel  Dockerfile.smolagents  Dockerfile.superagi  Dockerfile.swarm  Dockerfile.taskweaver
helm/: Chart.yaml  values.yaml
k8s/: grafana-dashboard.json  namespace.yaml  prometheus-config.yaml
scripts/: benchmark.py  cloudflare-tunnel.sh  deploy-cloudflare.sh  deploy.sh  generate-dockerfiles.sh  setup-vps.sh
(+5 files in other folders)
