[project]
name = "oneagent-os"
version = "1.0.0"
description = "Unified AI Agent OS — 24 frameworks in one system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.9.0",
]

[project.scripts]
oneagent-api = "packages.api.main:app"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
